# sdesim

./: LICENSE  README.md  pyproject.toml
src/sdesim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sdesim/derivops/: finite_diff.py
src/sdesim/integrators/: euler_maruyama.py  ito2.py  milstein.py  rk4.py
src/sdesim/models/: stochastic_params.py
src/sdesim/models/disease/: diseasev1.py  diseasev2.py
src/sdesim/models/hiveplant/: deterministic_hiveplant.py  stochastic_hiveplant.py
src/sdesim/models/pesticide_heat/: pesticide_heat_seasonal.py  pesticide_heat_seasonal_edited.py  pesticide_seasonal.py
